# doc-layout-pipeline

./: .env.example  .gitignore  count.py  exceptions.py  hierarchical_structure.py  main.py  pyproject.toml  test.py  todolist.md
config/: __init__.py  config_loader.py
layout_parsing/: __init__.py  html_generator.py  parser.py
object_parsing/: __init__.py  box_detector.py  hierarchy_parser.py  section_exporter.py  text_extractor.py  title_extractor.py  vlm_image_extractor.py  vlm_processor.py
output/test/layout_parsing_output/parsing_results/: page_0001_0_res.json  page_0002_0_res.json  page_0003_0_res.json  page_0004_0_res.json  page_0005_0_res.json  page_0006_0_res.json  page_0007_0_res.json  page_0008_0_res.json  page_0009_0_res.json  page_0010_0_res.json
services/vlm_server/: Dockerfile  GPU_SETUP.md  README.md  README_ALTERNATIVE.md  VERSION_GUIDE.md  docker-compose.yml  qwen3_vl_client.py
utils/: check_hierarchy.py
